tests/should-fail/crashes/shouldnt-crash-17.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
	else
		return 1
	type a extends aon
